--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev -p 5000",
+    "lint": "next lint",
+    "prepare": "npm-run-all -p prepare:*",
+    "prepare:graphql": "graphql-codegen",
+    "start": "next start"
   },
   "dependencies": {
     "graphql": "15.7.2",
@@ -32,6 +34,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "npm-run-all": "^4.1.5",
     "typescript": "4.6.4"
   }
 }
